# notebookinit

./: .gitignore  LICENSE  README.md  mkdocs.yml  ri.sh  setup.cfg  setup.py  setup_conda.sh  uninstall.sh  unsetup_conda.sh  update_mict.sh
demo/: managing_ipu_resources.ipynb  scratchpad.ipynb
demo/.ipynb_checkpoints/: demo1-checkpoint.ipynb  scratchpad-checkpoint.ipynb
docs/: index.md
notebookinit/: __init__.py  bring.py  math_ops.py  notebookinit.py  obsolete.py
