[metatata]
description = Toolset to accelerate experimental code development, primarily intended for jupyter notebook and it's derivatives
long-description = file: README.md
keywords = dev jupyter, toolset
license = MIT
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://rey.wiki
author = George Rey
requires =
    numpy
    dill
    pandas
    jupyter
    ipython
    mamba
    git+https://github.com/jerzydziewierz/mict.git#egg=mict
    python_version > "3.8"


[options]
packages =
    notebookinit

install_requires =
# =============== system
    python_version > "3.8"
    python-dotenv
    ipython
    jupyter
    nbdev
    watermark
    pqdm
    requests
    bounded-pool-executor
    dill
    mamba
    pydantic
    hjson
    mict @ git+https://github.com/jerzydziewierz/mict.git#egg=mict
    numpy
    pandas
    xarray
    cryptography
    hypothesis
    retry
    # ! Pycuda installer is currently broken.
    # pycuda
# =============== maths&physics
    einops
    jax
    scikit-learn
    sympy
    pint
    uncertainties
    flax
    tensorflow
    tensorflow-datasets
    # pymc3 # disabled due to incompatibility with scikit-learn


# =============== output
    plotly
    kaleido
    dash
    jupyter-dash
    mkdocs-material
    ffmpeg-python
    neptune-client



[options.entry_points]
console_scripts =
    notebookinit = notebookinit:welcome

