[metatata]
description = Toolset to accelerate experimental code development, primarily intended for jupyter notebook and it's derivatives
long-description = file: README.md
keywords = dev jupyter, toolset
license = MIT
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
url = https://rey.wiki
author = George Rey
requires =
    numpy
    dill
    pandas
    jupyter
    ipython
    mamba
    mict @ git+https://github.com/jerzydziewierz/mict.git#egg=mict


[options]
packages =
    notebookinit
python_requires = >=3.8

install_requires =
# =============== system
    python-dotenv
    ipython
    jupyter
    nbdev
    watermark
    pqdm
    requests
    bounded-pool-executor
    dill
    mamba
    pydantic
    hjson
    mict @ git+https://github.com/jerzydziewierz/mict.git#egg=mict
    numpy
    pandas
    xarray
    cryptography
    hypothesis
    retry
    # ! Pycuda installer is currently broken.
    # pycuda
# =============== maths&physics
    Automat
    automat[visualize]
    einops
    jax
    scikit-learn
    sympy
    pint
    uncertainties
    flax
    # pymc3 # disabled due to incompatibility with scikit-learn

# =============== input
    paho-mqtt
# =============== output
    plotly
    kaleido
    dash
    jupyter-dash
    mkdocs-material
    ffmpeg-python
    neptune-client
    # enables use of mermaid in notebook



[options.entry_points]
console_scripts =
    notebookinit = notebookinit:welcome

